# Interactive-Estimation-System-Using-LLM-based-RAG-Approach

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ERROR_FIX.md  EXTENDING.md  FIX_SUMMARY.md  INSTALL.md  LICENSE  Makefile  README.md  RECURSION_FIX.md  USER_GUIDE.md  config.json  config_tool.py  docker-compose.yml  pytest.ini  run.ps1  run.py  run.sh  setup.cfg  setup.py  test_fix.py  test_fixes.py
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/: __init__.py  config.py  estimator.py  graph.py  llm_service.py  main.py  models.py  utils.py
backend/tests/: __init__.py  conftest.py  test_app.py  test_estimator.py  test_graph.py  test_models.py  test_utils.py
frontend/: app.py  requirements.txt
